issue #208 show-hide text aligned properly

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -4211,8 +4211,10 @@ font-weight: 600;
 			font-size:13px;
 		}
 		.accordion-toggle{
-			line-height: 35px;
+			/*line-height: 35px;*/
 			color: #349EF1;
+			display: table-cell;
+			width: 100px;
 		}
 
 .status{
@@ -6809,7 +6811,7 @@ h3{
 	  display: inline-block;
 	  text-align: center;
 	  line-height: 29px;
-	  margin: 15px 1px;
+	  /*margin: 15px 1px;*/
 	  padding: 2px;
 
 	}
@@ -8352,7 +8354,7 @@ a{
 }
 
 .st-moile-span1{
-	  height: 120px;
+	  /*height: 120px;*/
   	  display: table !important;
   	  div:first-child{
   	  	    display: table-cell;
